@@ -1,3 +1,8 @@
+2004-05-13  Bruno Haible  <bruno@clisp.org>
+
+	* error.d (check_array_replacement): Use a more factual, less arrogant
+	error message.
+
 2004-05-13  Sam Steingold  <sds@gnu.org>
 
 	* utils/clispload.lsp (regression-test::*expected-failures*):
